--- a/src/App.css
+++ b/src/App.css
@@ -2,14 +2,17 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Roboto';
 }
 
 .Container {
-  padding: 64px 171px 40px;
+
   max-width: 1024px;
   margin: 0 auto;
 
+
 }
+
 
 .FontG {
   font-family: 'Roboto';
